Added rules page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<br>
 	<div class="page">
 		<br>
-		<a href="#">How to play?</a>
+		<a href="play.html">How to play?</a>
 		<br>
 		<br>
-		<table id="tableau" border="1" align="center">
+		<table id="tableau" align="center">
 			<tr>
 				<td>0</td>
 				<td>0</td>
