Editing game rules

--- a/play.html
+++ b/play.html
@@ -23,9 +23,9 @@
 		<br>
 		<p>To transform the grid, it's necessary to follow these three rules :</p>
 		<ul>
-			<li>no row or column can have more than one occurrence of any given number</li>
-			<li>'eliminated' cells cannot be adjacent, although they can be diagonal to one another</li>
-			<li>the remaining numbered cells must be all connected to each other, horizontally or vertically</li>
+			<li>No row or column can have more than one occurrence of any given number.</li>
+			<li>Black cells cannot be adjacent, although they can be diagonal to one another.</li>
+			<li>The remaining numbered cells must be all connected to each other, horizontally or vertically.</li>
 		</ul>
 		<br>
 		<p>Example of completed grid:</p>
