Fixing heart html symbol

--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@
 	<script src="js/game.js"></script>
 </body>
 <br>
-	<footer>Coded with &hearts by <a href="https://github.com/m4d4rchy">@m4d4rchy</a></footer>
+	<footer>Coded with &hearts; by <a href="https://github.com/m4d4rchy">@m4d4rchy</a></footer>
 </html>
